--- a/src/app/components/user-admin/user-admin.component.html
+++ b/src/app/components/user-admin/user-admin.component.html
@@ -1,6 +1,9 @@
-<h2>
-    User <small class="text-muted">:: Admin</small>
-</h2>
+<header class="d-flex justify-content-between align-items-center">
+    <h2>
+        User <small class="text-muted">:: Admin</small>
+    </h2>
+    <button (click)="removeFirstUser()" class="btn btn-outline-danger">Remove First</button>
+</header>
 <hr>
 
-<app-user-card [userList]="userList" ></app-user-card>
+<app-user-card [userList]="userList"></app-user-card>
